# grrs_rust_cli_tool

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: cli.rs
